
- Split pdat_osmotic() into pdat_osmotic_bact (bacteria),
  pdat_osmotic_euk (eukaryotes), and pdat_osmotic_halo (halophiles).
  Data from the 2017 compilation are available through .pdat_osmotic().

- New datasets: osmotic/LPK+13, osmotic/LYS+17, osmotic/LWS+19,
  3D/LYT+20, glucose/SFKD17, glucose/SFG+12, glucose/MFD+10,
  osmotic/KSK+18, osmotic/PNWB09, liver/BSG15, liver/DTS+07,
  osmotic/GBR+20, liver/RLA+10, osmotic/LFY+12, liver/SCL+20.

- Renamed functions: pdat_recomp() --> recomp(),
  pdat_multi() --> .pdat_multi().

- Remove lapply_canprot().

CHANGES IN canprot 0.1.6 (2020-04-10)
-------------------------------------

- This version was not released on CRAN. The package is archived on
  Zenodo (https://doi.org/10.5281/zenodo.3746998).

- Remove transcriptomic datasets from 2020 compilation.

- New datasets for hyperosmotic stress: JBG+18, KAK+17, LTH+11, MGF+19,
  AST+20, SMS+18, MPR+20, CCW+13, IXA+19, MHP+20, WFSL09, DSNM16, QHT+13.

- Other new datasets: colorectal/VHW+19, prostate/SHC+20,
  hypoxia/RVN+20, prostate/KHN+20, hypoxia/SPJ+20, 3D/EWK+19,
  secreted/CWG+19, 3D/KDS+14, hypoxia/LLL+19, hypoxia/GPT+19, 3D/SAS+14.

- Add datasets for liver cancer.

CHANGES IN canprot 0.1.5 (2020-02-20)
-------------------------------------

- This version was not released on CRAN. The package is archived on
  Zenodo (https://doi.org/10.5281/zenodo.3676560).

- Rename check_ID() to check_IDs() and add 'IDcol' argument. The
  function now uses a data frame for input and output.

- Remove update_IDs(). check_IDs() now maps old to new UniProt IDs.

- Remove remove_entries(). Its functionality has been replaced by
  cleanup(), which should be used after check_IDs().

- Naming consistency: rename pdat_CRC() to pdat_colorectal().

- Because of the more standardized workflow using check_IDs() and
  cleanup() (especially, detection of duplicates in cleanup() after ID
  updates in check_ID()), there are minor differences in results for