@@ -1,5 +1,5 @@
 "dataset","description","tags","n1","n2","ZC.down","ZC.up","ZC.diff","nH2O_rQEC.down","nH2O_rQEC.up","nH2O_rQEC.diff","nO2_biosynth.down","nO2_biosynth.up","nO2_biosynth.diff","nH2O_biosynth.down","nH2O_biosynth.up","nH2O_biosynth.diff","nAA.down","nAA.up","nAA.diff","pI.down","pI.up","pI.diff","GRAVY.down","GRAVY.up","GRAVY.diff"
-LTH+11,"S. cerevisae in 0.7 M NaCl vs control medium (YPD)",microbial,83,173,-0.1626,-0.1474,0.0152,0.063,0.0284,-0.0346,-1.7928,-1.7229,0.0698,0.4204,0.397,-0.0234,395,437,42,6.96,5.93,-1.03,-0.387,-0.385,0.002
+LTH+11,"S. cerevisae in 0.7 M NaCl vs control medium (YPD)",yeast,83,173,-0.1626,-0.1474,0.0152,0.063,0.0284,-0.0346,-1.7928,-1.7229,0.0698,0.4204,0.397,-0.0234,395,437,42,6.96,5.93,-1.03,-0.387,-0.385,0.002
 OBBH11,"adipose-derived stem cells in 400 mOsm vs 300 mOsm NaCl",,148,144,-0.1314,-0.1355,-0.0042,0.0237,0.046,0.0223,-1.6775,-1.7004,-0.0229,0.3427,0.3624,0.0198,444.5,376.5,-68,5.715,6.065,0.35,-0.3898,-0.3447,0.0451
 LFY+12_C1h,"cytoplasm of HEK293 cells in 500 (NaCl added) vs 300 mosmol/kg medium for 1 h",,19,36,-0.1591,-0.1397,0.0193,0.0732,0.0316,-0.0416,-1.7235,-1.6834,0.0401,0.4068,0.3822,-0.0246,364,485,121,7.15,5.845,-1.305,-0.2214,-0.3226,-0.1011
 LFY+12_C8h,"cytoplasm of HEK293 cells in 500 (NaCl added) vs 300 mosmol/kg medium for 8 h",,20,34,-0.1364,-0.1567,-0.0203,0.0572,0.0484,-0.0088,-1.7017,-1.6963,0.0055,0.377,0.425,0.0479,443.5,459,15.5,5.915,7.1,1.185,-0.3543,-0.2773,0.077
@@ -8,8 +8,10 @@ LFY+12_N1h,"nucleus of HEK293 cells in 500 (NaCl added) vs 300 mosmol/kg medium 
 LFY+12_N8h,"nucleus of HEK293 cells in 500 (NaCl added) vs 300 mosmol/kg medium for 8 h",,39,64,-0.105,-0.1233,-0.0183,0.0271,0.0272,1e-04,-1.6469,-1.6754,-0.0284,0.3441,0.3322,-0.0119,434,572.5,138.5,4.96,6.585,1.625,-0.5076,-0.5026,0.005
 LFY+12_N2p,"nucleus of HEK293 cells in 500 (NaCl added) vs 300 mosmol/kg medium for 2 passages",,22,67,-0.1059,-0.1208,-0.0149,0.0871,0.0414,-0.0457,-1.6066,-1.6731,-0.0665,0.3613,0.3436,-0.0177,670,573,-97,6.94,6.25,-0.69,-0.4376,-0.5692,-0.1316
 CLG+15,"human conjunctival epithelial cells in 380 or 480 mOsm vs 280 mOsm NaCl",,25,38,-0.1494,-0.1534,-0.004,0.0256,0.0427,0.0171,-1.7071,-1.7552,-0.0481,0.3781,0.3739,-0.0042,548,438,-110,5.78,6.385,0.605,-0.3116,-0.3095,0.0021
-YDZ+15,"Yarrowia lipolytica in 4.21 osmol/kg vs 3.17 osmol/kg NaCl",microbial,14,28,-0.1413,-0.1248,0.0165,0.077,0.034,-0.043,-1.6492,-1.6294,0.0197,0.412,0.358,-0.054,427.5,330,-97.5,5.875,5.74,-0.135,-0.2956,-0.3794,-0.0837
-RBP+16,"Paracoccidioides lutzii in 0.1 M KCl vs medium with no added KCl",microbial,160,141,-0.1371,-0.134,0.0031,0.0695,0.0113,-0.0582,-1.6704,-1.6333,0.0371,0.3646,0.3132,-0.0515,341,341,0,6.295,6.27,-0.025,-0.3188,-0.2685,0.0504
-JBG+18,"Candida albicans in 1 M NaCl vs medium with no added NaCl",microbial,84,63,-0.1506,-0.153,-0.0023,0.0493,0.0213,-0.028,-1.8066,-1.732,0.0746,0.4167,0.4054,-0.0114,365,350,-15,6.67,5.79,-0.88,-0.5212,-0.3747,0.1466
+YDZ+15,"Yarrowia lipolytica in 4.21 osmol/kg vs 3.17 osmol/kg NaCl",yeast,14,28,-0.1413,-0.1248,0.0165,0.077,0.034,-0.043,-1.6492,-1.6294,0.0197,0.412,0.358,-0.054,427.5,330,-97.5,5.875,5.74,-0.135,-0.2956,-0.3794,-0.0837
+GAM+16_HTS,"human small airway epithelial cells HTS vs isotonic",,211,396,-0.1443,-0.1269,0.0173,0.0091,0.0219,0.0128,-1.7188,-1.6662,0.0525,0.3333,0.3102,-0.0231,323,506.5,183.5,6.48,6.175,-0.305,-0.3169,-0.3914,-0.0745
+GAM+16_HTS.Cmx,"human small airway epithelial cells HTS.Cmx vs isotonic.Cmx",,303,250,-0.1397,-0.1337,0.0061,0.0144,0.0177,0.0033,-1.7002,-1.6701,0.0301,0.3329,0.3171,-0.0158,308,480,172,6.28,6.11,-0.17,-0.3372,-0.4076,-0.0704
+RBP+16,"Paracoccidioides lutzii in 0.1 M KCl vs medium with no added KCl",yeast,160,141,-0.1371,-0.134,0.0031,0.0695,0.0113,-0.0582,-1.6704,-1.6333,0.0371,0.3646,0.3132,-0.0515,341,341,0,6.295,6.27,-0.025,-0.3188,-0.2685,0.0504
+JBG+18,"Candida albicans in 1 M NaCl vs medium with no added NaCl",yeast,84,63,-0.1506,-0.153,-0.0023,0.0493,0.0213,-0.028,-1.8066,-1.732,0.0746,0.4167,0.4054,-0.0114,365,350,-15,6.67,5.79,-0.88,-0.5212,-0.3747,0.1466
 SMS+18_wt,"epidermal lysate of mice kept in 40% vs 70% humidity, wt",,113,74,-0.0989,-0.1301,-0.0311,0.0519,0.0119,-0.0399,-1.5785,-1.6832,-0.1047,0.2746,0.3317,0.057,350,429.5,79.5,6.33,5.86,-0.47,-0.5396,-0.3494,0.1903
 SMS+18_FGFR12.deficient,"epidermal lysate of mice kept in 40% vs 70% humidity, FGFR12.deficient",,125,97,-0.1203,-0.1361,-0.0159,0.0207,0.0408,0.0201,-1.642,-1.6892,-0.0472,0.2977,0.3004,0.0028,404,317,-87,5.97,6.75,0.78,-0.4424,-0.4588,-0.0164
