@@ -2609,3 +2609,14 @@
   volume    = {19},
   doi       = {10.1021/acs.jproteome.9b00846},
 }
+
+@Article{GAM+16,
+  author    = {Gamboni, Fabia and Anderson, Cameron and Mitra, Sanchayita and Reisz, Julie A. and Nemkov, Travis and Dzieciatkowska, Monika and Jones, Kenneth L. and Hansen, Kirk C. and D’Alessandro, Angelo and Banerjee, Anirban},
+  journal   = {Journal of Proteome Research},
+  title     = {Hypertonic saline primes activation of the p53–p21 signaling axis in human small airway epithelial cells that prevents inflammation induced by pro-inflammatory cytokines},
+  year      = {2016},
+  number    = {10},
+  pages     = {3813--3826},
+  volume    = {15},
+  doi       = {10.1021/acs.jproteome.6b00602},
+}
