@@ -84,8 +84,9 @@ __b__. Supplementary Table 1 of @OBBH11.
 __c__. __d__. __e__. __f__. __g__. __h__. Supplementary Table S1 of @LFY+12 (sheet "All proteins"), filtered to include proteins with _q_-value < 0.1.
 __i__. Table 2 of @CLG+15.
 __j__. Table 1 of @YDZ+15.
-__k__. Supplementary Tables 2 and 3 of @RBP+16.
-__l__. Supplementary Tables 1 and 2 of @JBG+18.
-__m__. __n__. Supplementary Table S1 of @SMS+18.
+__k__. __l__. Supplementary Table 2 of @GAM+16, filtered to include proteins with fold change > 2 or < 0.5 in hypertonic saline (HTS) / isotonic solution, with or without cytomix treatment (Cmx).
+__m__. Supplementary Tables 2 and 3 of @RBP+16.
+__n__. Supplementary Tables 1 and 2 of @JBG+18.
+__o__. __p__. Supplementary Table S1 of @SMS+18.
 
 ## References
